ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatewise-ingress
  namespace: gatewise
spec:
  ingressClassName: nginx
  rules:
  - host: gatewise.lhtran.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gatewise-service
            port:
              number: 8000
  - host: gatewise-preview.lhtran.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gatewise-service-preview
            port:
              number: 8000
